Build/third-party-libraries/packages/nuget.org/system.text.regularexpressions/4.1.0/readme.md
System.Text.RegularExpressions [4.1.0](https://www.nuget.org/packages/System.Text.RegularExpressions/4.1.0)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides the System.Text.RegularExpressions.Regex class, an implementation of a regular expression engine.

Commonly Used Types:
System.Text.RegularExpressions.Regex
System.Text.RegularExpressions.RegexOptions
System.Text.RegularExpressions.Match
System.Text.RegularExpressions.Group
System.Text.RegularExpressions.Capture
System.Text.RegularExpressions.MatchEvaluator
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 1
-----------

|Name|Version|
|----------|:----|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|

*This page was generated by a tool.*